--- a/Bayesian_Model_Cauchy.ipynb
+++ b/Bayesian_Model_Cauchy.ipynb
@@ -67,8 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dff = pd.read_excel(r'C:\\Users\\L7927301\\Documents\\Projects\\Global PCR Pricing\\roller_pricing.xlsx', sheet_name='Complexity 1',usecols=['WGT net KG (from MD)', 'Unit Price'])\n",
-    "dff.columns = ['Quantity', 'Unit Price']\n",
+    "",
     "dff = dff[dff['Quantity'] > 0]\n",
     "dff = dff[dff['Unit Price'] > 0]"
    ]
@@ -162,9 +161,9 @@
      "text": [
       "Auto-assigning NUTS sampler...\n",
       "Initializing NUTS using jitter+adapt_diag...\n",
-      "c:\\Users\\L7927301\\Documents\\Projects\\Global PCR Pricing\\bayesian\\lib\\site-packages\\theano\\tensor\\elemwise.py:826: RuntimeWarning: divide by zero encountered in log\n",
+      "c:\\Users\\L7927301\\Documents\\Projects\\Global Pricing\\bayesian\\lib\\site-packages\\theano\\tensor\\elemwise.py:826: RuntimeWarning: divide by zero encountered in log\n",
       "  variables = ufunc(*ufunc_args, **ufunc_kwargs)\n",
-      "c:\\Users\\L7927301\\Documents\\Projects\\Global PCR Pricing\\bayesian\\lib\\site-packages\\theano\\tensor\\elemwise.py:826: RuntimeWarning: invalid value encountered in multiply\n",
+      "c:\\Users\\L7927301\\Documents\\Projects\\Global Pricing\\bayesian\\lib\\site-packages\\theano\\tensor\\elemwise.py:826: RuntimeWarning: invalid value encountered in multiply\n",
       "  variables = ufunc(*ufunc_args, **ufunc_kwargs)\n",
       "Multiprocess sampling (4 chains in 4 jobs)\n",
       "NUTS: [β, α]\n"
