--- a/Bayesian_Model_v4.ipynb
+++ b/Bayesian_Model_v4.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Testing the Bayesian model on Roller+Roller LB, SiSiC, Rodental Plant\n",
+    "Testing the Bayesian model\n",
     "\n",
     "Filtered data and extracted only these values to a different excel sheet, created a new column based on the weight per kg based off selling price and total weight sold.\n",
     "\n",
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "df = pd.read_excel(r'C:\\Users\\L7927301\\Documents\\Projects\\Global PCR Pricing\\roller_pricing.xlsx', sheet_name='Complexity 1',usecols=['WGT net KG (from MD)', 'Unit Price'])\n",
+    "df = pd.read_excel()\n",
     "df.columns = ['Quantity', 'Price']\n",
     "df = df[df['Quantity'] > 0]\n",
     "df = df[df['Price'] > 0]\n",
@@ -230,9 +230,9 @@
      "text": [
       "Auto-assigning NUTS sampler...\n",
       "Initializing NUTS using jitter+adapt_diag...\n",
-      "c:\\Users\\L7927301\\Documents\\Projects\\Global PCR Pricing\\bayesian\\lib\\site-packages\\theano\\tensor\\elemwise.py:826: RuntimeWarning: divide by zero encountered in log\n",
+      "c:\\Users\\L7927301\\Documents\\Projects\\Global Pricing\\bayesian\\lib\\site-packages\\theano\\tensor\\elemwise.py:826: RuntimeWarning: divide by zero encountered in log\n",
       "  variables = ufunc(*ufunc_args, **ufunc_kwargs)\n",
-      "c:\\Users\\L7927301\\Documents\\Projects\\Global PCR Pricing\\bayesian\\lib\\site-packages\\theano\\tensor\\elemwise.py:826: RuntimeWarning: invalid value encountered in multiply\n",
+      "c:\\Users\\L7927301\\Documents\\Projects\\Global Pricing\\bayesian\\lib\\site-packages\\theano\\tensor\\elemwise.py:826: RuntimeWarning: invalid value encountered in multiply\n",
       "  variables = ufunc(*ufunc_args, **ufunc_kwargs)\n",
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [a, log_b]\n"
