--- a/PriceAnalytics-Segment_Tier.ipynb
+++ b/PriceAnalytics-Segment_Tier.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1=pd.read_excel(\"")"
+    "df1=pd.read_excel(\"C:/Users/L7927301/Documents/PCR/Bangalore_Prices.xlsx\")"
    ]
   },
   {
