--- a/Association.ipynb
+++ b/Association.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "code",
    "execution_count": 93,
    "source": [
-    "df = pd.read_excel(r'C:\\Users\\L7927301\\Documents\\Projects\\Global PCR Pricing\\data_edited_cer_July-dedup.xlsx',usecols=['Time Inv Date ID','SKU SKU','SKU - Formulation Desc DESC','Matl Desc ID2','QTY UOM','CUST BillTo # ID','Unit Price'])\r\n",
+    "df = pd.read_excel(r'up.xlsx',usecols=['Time Inv Date ID','SKU SKU','SKU - Formulation Desc DESC','Matl Desc ID2','QTY UOM','CUST BillTo # ID','Unit Price'])\r\n",
     "\r\n",
     "len(df)"
    ],
